// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WorkoutStatusBar > matches snapshot (full state) 1`] = `
<div
  class="WorkoutStatusBarRoot-sc-12c3i7q-0 diIruA"
>
  <span
    class="ant-tag ant-tag-filled ant-tag-success BadgeTag-sc-1ky7gew-0 jhktSS css-dev-only-do-not-override-xogyor css-var-_r_0_"
  >
    Модель: 
    ok
  </span>
  <span
    class="ant-tag ant-tag-filled ant-tag-success BadgeTag-sc-1ky7gew-0 jhktSS css-dev-only-do-not-override-xogyor css-var-_r_0_"
  >
    Camera: 
    ready
  </span>
  <span
    class="ant-tag ant-tag-filled ant-tag-blue BadgeTag-sc-1ky7gew-0 jhktSS css-dev-only-do-not-override-xogyor css-var-_r_0_"
  >
    Voice
  </span>
  <span
    class="ant-tag ant-tag-filled BadgeTag-sc-1ky7gew-0 jtjROa css-dev-only-do-not-override-xogyor css-var-_r_0_"
  >
    Упражнение приостановлено
  </span>
  <span
    class="WorkoutStatusBarCameraError-sc-12c3i7q-1 kLBfEa"
  >
    Ошибка камеры: 
    boom
  </span>
</div>
`;

exports[`WorkoutStatusBar > matches snapshot (minimal) 1`] = `
<div
  class="WorkoutStatusBarRoot-sc-12c3i7q-0 diIruA"
>
  <span
    class="ant-tag ant-tag-filled ant-tag-blue BadgeTag-sc-1ky7gew-0 jhktSS css-dev-only-do-not-override-xogyor css-var-_r_1_"
  >
    Модель: 
    wait
  </span>
  <span
    class="ant-tag ant-tag-filled BadgeTag-sc-1ky7gew-0 eVqakK css-dev-only-do-not-override-xogyor css-var-_r_1_"
  >
    Camera: 
    off
  </span>
  <span
    class="ant-tag ant-tag-filled BadgeTag-sc-1ky7gew-0 eVqakK css-dev-only-do-not-override-xogyor css-var-_r_1_"
  >
    V
  </span>
</div>
`;
